# json2parquet

./: .gen.sh.swp  Cargo.toml  README.md  gen.sh  out.parquet  output_0.parquet  test.json  test.parquet
src/: main.rs
