[package]
name = "parquet-test"
version = "0.1.0"
authors = ["cpard <costas.pardalis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "5.1.0"
arrow = "5.1.0"
structopt = "0.3.22"
serde_json = "1.0"
